cmake_minimum_required(VERSION 3.5.2 FATAL_ERROR)

project(GTest_GMock_Lesson9)

# Enables testing
enable_testing()

# Adds subdirectory with tests for the library previously added
add_subdirectory(Tests)

# Author: Marcin Serwach
# Tutorial: https://github.com/iblis-ms/tutorials/tree/master/GTest_GMock


